[gd_scene load_steps=9 format=3 uid="uid://cve58hosgw0ks"]

[ext_resource type="Script" uid="uid://bhn7siro8os1l" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://frusipkuga05" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://34i5yh5q6u2i" path="res://mob.tscn" id="2_lquwl"]
[ext_resource type="Script" uid="uid://bjd0e84aqjla1" path="res://Player.gd" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://pe124g8pgu52" path="res://hud.tscn" id="3_h2yge"]
[ext_resource type="AudioStream" uid="uid://d2pv4bjf6udju" path="res://dodge_the_creeps_2d_assets/art/gameover.wav" id="6_7mycd"]
[ext_resource type="AudioStream" uid="uid://cqsvxnjmigikl" path="res://dodge_the_creeps_2d_assets/art/House In a Forest Loop.ogg" id="7_272bh"]

[sub_resource type="Curve2D" id="Curve2D_h2yge"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 375, 69, 0, 0, 0, 0, 476, 640, 0, 0, 0, 0, 121, 710, 0, 0, 0, 0, 22, 657, 0, 0, 0, 0, 95, 510, 0, 0, 0, 0, 56, 334, 0, 0, 0, 0, 334, 494, 0, 0, 0, 0, 352, 230, 0, 0, 0, 0, 126, 173, 0, 0, 0, 0, 126, 77, 0, 0, 0, 0, 411, 124, 0, 0, 0, 0, 453, 448, 0, 0, 0, 0, 116, 264, 0, 0, 0, 0, 25, 170, 0, 0, 0, 0, 328, 173, 0, 0, 0, 0, 424, 87, 0, 0, 0, 0, 380, 549, 0, 0, 0, 0, 147, 616, 0, 0, 0, 0, 442, 692)
}
point_count = 20

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
Mob = ExtResource("2_lquwl")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 720.0
color = Color(0.372549, 0.372549, 0.607843, 0.764706)

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(208, 417)
script = ExtResource("3_1bvp3")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_h2yge")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(8, 0)
rotation = 0.185841

[node name="HUD" parent="." instance=ExtResource("3_h2yge")]

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7mycd")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_272bh")

[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
